# P3DX2

./: README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/phi_aria/share/phi_aria/: local_setup.sh  package.sh
install/py_pubsub/share/py_pubsub/: package.sh
install/tp1/share/tp1/: package.sh
log/: latest_build
src/install/: setup.sh  setup.zsh
src/install/phi_aria/share/ament_index/resource_index/parent_prefix_path/: phi_aria
src/install/phi_aria/share/phi_aria/: local_setup.sh  package.sh
src/install/py_pubsub/share/py_pubsub/: package.sh
src/install/tp1/share/tp1/: package.sh
src/log/: latest_build
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/install/: local_setup.sh  setup.sh
src/py_pubsub/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
src/py_pubsub/log/: latest_build
src/py_pubsub/py_pubsub/: subscriber_member_function.py
src/py_pubsub/py_pubsub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/py_pubsub/py_pubsub/log/: latest_build
src/tp1/: CMakeLists.txt
src/tp1/include/: Action.h  Perception copy.h  Perception.h
src/tp1/include/install/: local_setup.sh  setup.sh
src/tp1/include/log/: latest_build
src/tp1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/tp1/install/tp1/share/tp1/: package.sh
src/tp1/log/: latest_build
src/tp1/src/: Action.cpp  Action.cpp.bak  Perception.cpp  Utils.cpp  main copy 2.cpp  main copy.cpp  main.cpp
src/tp1/src/install/: local_setup.sh  setup.sh
src/tp1/src/log/: latest_build
